--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,10 +5,10 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="17"
         android:targetSdkVersion="17" />
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="cn.Memo.memogank.App.MemoGankApplication"
@@ -18,7 +18,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="cn.Memo.memogank.Activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
